Fixing card overflow scroll

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
     line-height: 27px;
     margin: 5px;
     overflow-wrap: break-word;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 80px 50px;
     position: relative;
     text-align: center;
